src/frontend/static/css/correlation.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

#container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
}

.corr {
    height: calc(95vh - 48px - 54px);
    display: inline-block;
}

#chart-section {
    height: 100%;
    width: 100%;
}

.corr p {
    line-height: 1.3;
}

#warnings {
    height: 5vh;
    width: 100%;
    border-bottom: 1px solid black;
}

#warnings p {
    margin-left: 5px;
}

#warnings p,
#warnings em {
    font-size: 1.75vh;
}

#settings {
    width: 10vw;
    background-color: white;
    padding: 10px;
}

#settings form {
    margin-top: 0.5vh;
    margin-right: 0.5vw;
}

#temp-oxy-view {
    width: 100%;
    height: 10vh;
}

#temp-oxy-view legend {
    float: right;
}

#dist-and-flow {
    width: 100%;
    min-height: 20vh;
}

#dist-and-flow legend {
    float: right;
}

#dist-and-flow input[type=text] {
    width: 25%;
}

#settings form #r {
    float: left;
}

#graph {
    width: 70vw;
}

#form {
    width: 20vw;
    border-left: 1px solid black;
}

#form form {
    margin-left: 0.5vw;
}

input[type=submit]:disabled {
    color: grey;
}
@media (max-width: 768px){
	#container{
		flex-direction: column;
	}
	.corr{
		height: auto;
		min-height: 50vh;
		width: 100%;
	}
	#settings{
		width: 100%;
		order: 3;
	}
	#graph{
		width: 100%;
		order: 2;
		height:50vh;
	}
	#form{
		width: 100%;
		order: 1;
	}
	#warning{
		height: auto;
		min-height: 15vh;
	}
	#temp-oxy-view, #dist-and-flow{
		height: auto;
		min-height: 15vh;
	}
	#dist-and-flow input[type=text]{
		width: 100%;
		margin-bottom: 5px;
	}
	#settings form, #form form{
		margin: 10px;
	}
}
@media (max-width: 480px) {
    #warnings p,
    #warnings em {
        font-size: 12px;
    }
    
    .corr {
        min-height: 4vh;
    }
}

